[package]
name = "amibussy"
version = "0.1.0"
edition = "2021"
authors = ["Ivan Zakutnii <zakutnii.ivan@gmail.com>"]
description = "A Rust application integrating Toggl Track and Telegram via webhooks."
license = "MIT"
keywords = ["telegram", "toggl", "webhook", "rust", "axum"]
categories = ["api-bindings", "network-programming", "asynchronous"]
repository = "https://github.com/m0n0x41d/amibussy"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
hyper = { version = "0.14", features = ["full"] }
tracing-subscriber = "0.3"
ngrok = { version = "0.13.1", features = ["axum"] }
anyhow = "1.0.90"
grammers-client = "0.7.0"
teloxide = "0.13.0"
reqwest = { version = "0.12.8", features = ["json"] }
config = { version = "0.14.0", features = ["yaml"] }
shellexpand = "3.1.0"
